--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   mysqldb:
-    image: mysql:5.7
+    image: mysql:latest
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD="root"
       - MYSQL_DATABASE="prueba"
     ports:
-      - "3307:3307"
+      - "3306:3306"
     networks:
       - backend
     volumes:
