--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mysql:8.3
     restart: unless-stopped
     environment:
+      - DB_USER="root"
       - MYSQL_ROOT_PASSWORD="root"
       - MYSQL_DATABASE="prueba"
     ports:
