--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
     image: mysql:8.3
     restart: unless-stopped
     environment:
-      - DB_USER="root"
       - MYSQL_ROOT_PASSWORD="root"
       - MYSQL_DATABASE="prueba"
+      - MYSQL_USER= "admin"
+      - MYSQL_PASSWORD= "root"
     ports:
       - "3307:3306"
     networks:
