--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD="root"
       - MYSQL_DATABASE="prueba"
+      - MYSQL_USER="admin"
+      - MYSQL_PASSWORD="admin"
     ports:
       - "3306:3306"
     volumes:
